S3 cleanup upon Session removal